--- a/applications/editors/josm/plugins/public_transport/resources/public_transport.html
+++ b/applications/editors/josm/plugins/public_transport/resources/public_transport.html
@@ -287,7 +287,7 @@ with the tasks you can:</p>
 <p>
 <a id="notion.oxmoa"/>
 <strong>Oxmoa scheme</strong>
-- see <a href="http://wiki.openstreetmap.org/wiki/User:Oxomoa/Public_transport_schema">http://wiki.openstreetmap.org/wiki/User:Oxomoa/Public_transport_schema</a>.
+- see <a href="https://wiki.openstreetmap.org/wiki/User:Oxomoa/Public_transport_schema">https://wiki.openstreetmap.org/wiki/User:Oxomoa/Public_transport_schema</a>.
 This plug-in implements a subset of the Oxmoa scheme. We implement in particular here the splitting of <a href="#notion.line">bus lines</a> into <a href="#notion.bus_route">bus routes</a>. This allows to display the correct order of an itinerary and stops even if a section is passed twice or several times. The extra relations per line number on top of the bus route relations aren't implemented yet because there is no known use case for them. Also, the concept <em>stop_position</em> has not been implemented as it causes ambiguities: if it is placed on a non-oneway, the direction of the stop_position is unclear.
 </p>
 
